test(LottoNumberTest): 로또 번호 오름차순으로 나오는지 확인하는 테스트 수정
기존 테스트 수정  to LottoNumberTest
- List.of ->Arrays.asList 로 변경
- UnsupportedOperationException 예외가 발생

BREAKING CHANGE: List of는 temp List임으로 값을 추가, 변경 삭제 시 오류가 발생한다. 그래서 new로 생성시키는 list를 이용해야 한다.